@@ -106,7 +106,7 @@ int send_packet(uint8_t target, uint8_t cmd, uint16_t length,
 int recv_packet(uint8_t * host, uint8_t * cmd, uint16_t * length,
 		uint8_t * data);
 
-void pad_buffer(char *varname, uint8_t value);
+void pad_buffer(uint8_t* varname, uint8_t value);
 
 #ifndef WORDS_BIGENDIAN
 # define fixup(x) (x &= 0x0000ffff)
